Tue May 30 23:52:45 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* httools/htmerge.cc: Move to httools directory, remove "cleanup"
	functionality now in htpurge and merge in htmerge.h and db.cc files.
	
	* httools/Makefile.am: Add htmerge now moved to this directory.

	* */Makefile.in: Update with automake.

	* Makefile.am (SUBDIRS): Remove htmerge, now found in httools.

	* configure.in: Ditto.

	* configure: Update with autoconf.

	* test/test_functions.in: Add paths for htpurge, htstat, htload,
	htdump and update path for htmerge.

	* test/t_htdig: Change htmerge to htpurge to clean out incorrect URLs.

	* installdir/rundig: Change htmerge to htpurge. This needs serious
	additional cleanup for use in 3.2 since many conventions have changed!

Tue May 23 22:21:14 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* README: Fix for 3.2.0b3 and clean up organization a bit for new
	directory structure.

Wed May 17 23:22:31 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HTML.cc (do_tag): Add support for TITLE attributes in
	anchor and related tags.

Fri May 12 17:54:09 2000  Loic Dachary  <loic@senga.org>

	* db/acinclude.m4: bigfile support is disabled by default.

	* db/mp_region.c (CDB___memp_close): clear weakcmpr pointer
	  when closing region so that memory pool files are not 
	  released twice.

Wed May 10 22:26:21 2000  Loic Dachary  <loic@senga.org>

	* */*.cc: all include htconfig.h

	* htlib/HtTime.h: remove htconfig.h inclusion (never in headers)

	* htlib/*.h,*.cc: Fix copyright GNU Public -> Gnu General Public
	  and 1999, 2000 instead of 1999.

Tue May 09 16:38:07 2000  Loic Dachary  <loic@senga.org>

	* htsearch/Collection.cc (Collection): set searchWords and 
	  searchWordsPattern to null in constructor. Delete in destructor.
	  Also delete matches in destructor.

	* test/word.cc (doskip_harness): free cursor after use.

	* test/word.cc (doskip_overflow): free cursor after use.

	* test/dbbench.cc (find): free cursor after use.